...
        android:id="@+id/layoutServerSelection"
        layout="@layout/layout_server_selection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/layoutScoreboard"
        app:layout_constraintBottom_toTopOf="@id/buttonUndo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- WIDOK 4: Serwis (Ace/Fault/Ball in play) -->
    <include
        android:id="@+id/layoutServe"
...
        android:enabled="false"
        android:visibility="visible"
        android:backgroundTint="#FF9800"
        app:icon="@android:drawable/ic_menu_revert"
        app:iconGravity="start"
        style="@style/Widget.MaterialComponents.Button"
        app:layout_constraintBottom_toTopOf="@id/buttonBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"/>

...
